# web-applications-with-fastapi-course

ben/: pyproject.toml
ben/src/: main.py
ben/src/core/: utils.py
ben/src/data/: package.py  release.py
ben/src/services/: package_service.py
ben/src/viewmodels/home/: index_viewmodel.py
ben/src/viewmodels/shared/: viewmodel.py
ben/src/views/: account.py  home.py  packages.py
code/ch5-viewmodels/services/: package_service.py
code/ch6-users-and-forms/infrastructure/: cookie_auth.py
code/ch6-users-and-forms/services/: user_service.py
code/ch7-databases/data/: db_session.py
code/ch7-databases/services/: package_service.py
code/ch8-async-databases/data/: db_session.py  package.py  release.py
code/ch8-async-databases/services/: package_service.py
